--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -65,18 +65,21 @@ Global styles and classes
     box-shadow: inset 0px 2px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 12px 24px 6px rgba(0, 0, 0, 0.2), inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
   }
 
-  .button:after {
+  .button:after,
+  .button-blue:after {
     content: " ❯";
   }
   
+  h2 {
+    font-family: OpenSansLightItalic;
+    color: #676767;
+  }
 
   .hero-unit {
     font-family: OpenSansLight, sans-serif;
   }
 
   .hero-unit h2 {
-    font-family: OpenSansItalic;
-    color: #676767;
     text-transform: lowercase;
   }
 
@@ -163,6 +166,7 @@ Layout styles
   }
 
   #colophon h2 {
+    font-family: OpenSansLight;
     color: #999; 
     font-size: 2em;
   }
