--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -12,6 +12,9 @@
         <p>Learn HTML, webify video or level up on game development today. The Webpage Maker is a two pane editor that allows you to design, edit and publish webpages in real-time on the Web. The Web is your canvas. What are you going to do with it?</p>
         <p><a class="button-blue">Go to the editor</a></p>
       </div>
+      <div class="pat span4">
+        <div class="pat-hands"></div>
+      </div>
     </div>
   </div>
 
