re-enable editor link

--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -29,7 +29,7 @@
         <div class="span6">
           <nav id="nav-main" role="navigation">
             <ol>
-              <li><a href="">Editor</a></li>
+              <li><a href="/editor">Editor</a></li>
               <li><a href="{{ url('webpagemaker.website.views.projects') }}">Projects</a></li>
               <li><a href="{{ url('webpagemaker.website.views.gallery') }}">Gallery</a></li>
               <li><a href="{{ url('webpagemaker.website.views.about') }}">About</a></li>
