macro-ified projects on project page

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -17,137 +17,87 @@
 
   <div class="container">
     <ul class="projects list">
-      <li class="project">
-        <div>
-            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html">
-              <img src="https://wiki.mozilla.org/images/7/70/Internetfamous.jpg" alt="">
-            </a>
-            <div class="caption">
-              By Mozilla
-            </div>
-        </div>
-        <div>
-          <h3>Make Your Own Meme</h3>
-          <p>Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page -- featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine.</p>
-          <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
-          <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html" class="btn btn-primary">Make Project</a>
-        </div>
-      </li>
-
-      <li class="project">
-        <div class="thumbnail row">
-          <div class="span3">
-              <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html">
-                <img src="https://wiki.mozilla.org/images/8/88/Arcademap.jpg" alt="">
-              </a>
-              <div class="caption">
-                By Mozilla
-              </div>
-          </div>
-          <div class="span7">
-            <h3>Hack The Web Arcade</h3>
-            <p>HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>"quotes like this."</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it.Use the comments to navigate your way. Your goal: fix a broken map of the web arcade to unlock new missions and explore brave new webby worlds.</p>
-            <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML Syntax</span></p>
-            <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html" class="btn btn-primary">Make Project</a>
-          </div>
-        </div>
-      </li>
-
-      <li class="project">
-        <div class="thumbnail row">
-          <div class="span3">
-              <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523">
-                <img src="https://wiki.mozilla.org/images/8/89/Stuck90s.png" alt="">
-              </a>
-              <div class="caption">
-                By Mozilla
-              </div>
-          </div>
-          <div class="span7">
-            <h3>Make ugly '90s webpages pretty</h3>
-            <p>Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly -- kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s.</p>
-            <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
-            <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523" class="btn btn-primary">Make Project</a>
-          </div>
-        </div>
-      </li>
-
-      <li class="project">
-        <div class="thumbnail row">
-          <div class="span3">
-              <a href="https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY">
-                <img src="https://wiki.mozilla.org/images/3/34/Popdiy.png" alt="">
-              </a>
-              <div class="caption">
-                By Mozilla
-              </div>
-          </div>
-          <div class="span7">
-            <h3>Remix your own TV commercial</h3>
-            <p>Add your own voice to a cheesy 1950s TV commercial! Add pop-ups and commentary, change meanings, and hack pop culture using Mozilla Popcorn.</p>
-            <p><span class="label">Popcorn Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">Hacking</span> <span class="label">Design Thinking</span></p>
-            <p><a href="https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY" class="btn btn-primary">Make Project</a>
-          </div>
-        </div>
-      </li>
-
-      <li class="project">
-        <div class="thumbnail row">
-          <div class="span3">
-              <a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY">
-                <img src="https://wiki.mozilla.org/images/5/5c/Iathumb.png" alt="">
-              </a>
-              <div class="caption">
-                By Hive NYC
-              </div>
-          </div>
-          <div class="span7">
-            <h3>Create your own "Inanimate Alice" episode</h3>
-            <p>This project uses the popular "Inanimate Alice" interactive novel and Mozilla Hackasaurus to create narrative mayhem. Youth can create their own narrative using characters and a storyline they create, learning how to remix the web along the way. </p>
-            <p><span class="label">Hackasaurus</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Writing</span></p>
-            <p><a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY" class="btn btn-primary">Make Project</a>
-          </div>
-        </div>  
-      </li>
-
-      <li class="project">
-        <div class="thumbnail row">
-          <div class="span3">
-              <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html">
-                <img src="https://wiki.mozilla.org/images/5/59/Webstructables.jpg" alt="">
-              </a>
-              <div class="caption">
-                By Mozilla
-              </div>
-          </div>
-          <div class="span7">
-            <h3>Make your own "webstructable" how-to</h3>
-            <p>This project lets you create your own web page tutorial. Use your new-found HTML, CSS and Popcorn wisdom to create the world's greatest how-to. What do you want to make today?</p>
-            <p><span class="label">Webpage Maker</span> <span class="label">Advanced Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Popcorn</span> <span class="label">Teaching Others</span></p>
-            <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html" class="btn btn-primary">Make Project</a>
-          </div>
-        </div>
-      </li>
-      <li class="project">
-        <div class="thumbnail row">
-          <div class="span3">
-              <a href="http://toolness.github.com/friendlycode/?p=/p/151">
-                <img src="https://wiki.mozilla.org/images/b/be/Soapthumb.png" alt="">
-              </a>
-              <div class="caption">
-                By Hive NYC
-              </div>
-          </div>
-          <div class="span7">
-            <h3>Speak Your Mind</h3>
-            <p><em>Got something to shout about? </em>>A rant, cause, passion project or block party you want the world to know about? Shout it from the rooftops by making your own web page in minutes, using this handy remixable template. Then share it via email, Twitter, Facebook or URL. Easy!</p>
-            <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Civic Engagement</span> <span class="label">Creative Commons</span></p>
-            <p><a href="http://toolness.github.com/friendlycode/?p=/p/151"class="btn btn-primary">Make Project</a>
-          </div>
-        </div>
-      </li>
+      {{ project(
+           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html",
+           img         = "https://wiki.mozilla.org/images/7/70/Internetfamous.jpg",
+           img_alt     = "",
+           author      = "Mozilla",
+           title       = "Make Your Own Meme",
+           description = "Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page -- featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine."
+         ) 
+	  }}
+	  {{ project(
+           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html",
+           img         = "https://wiki.mozilla.org/images/8/88/Arcademap.jpg",
+           img_alt     = "",
+           author      = "Mozilla",
+           title       = "Hack The Web Arcade",
+           description = "HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>\"quotes like this.\"</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it.Use the comments to navigate your way. Your goal: fix a broken map of the web arcade to unlock new missions and explore brave new webby worlds."
+         ) 
+      }}
+	  {{ project(
+           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523",
+           img         = "https://wiki.mozilla.org/images/8/89/Stuck90s.png",
+           img_alt     = "",
+           author      = "Mozilla",
+           title       = "Make ugly '90s webpages pretty",
+           description = "Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly -- kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s."
+         ) 
+      }}
+	  {{ project(
+           href        = "https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY",
+           img         = "https://wiki.mozilla.org/images/3/34/Popdiy.png",
+           img_alt     = "",
+           author      = "Mozilla",
+           title       = "Remix your own TV commercial",
+           description = "Add your own voice to a cheesy 1950s TV commercial! Add pop-ups and commentary, change meanings, and hack pop culture using Mozilla Popcorn."
+         ) 
+      }}
+	  {{ project(
+           href        = "https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY",
+           img         = "https://wiki.mozilla.org/images/5/5c/Iathumb.png",
+           img_alt     = "",
+           author      = "Hive NYC",
+           title       = "Create your own \"Inanimate Alice\" episode",
+           description = "This project uses the popular \"Inanimate Alice\" interactive novel and Mozilla Hackasaurus to create narrative mayhem. Youth can create their own narrative using characters and a storyline they create, learning how to remix the web along the way."
+         ) 
+      }}
+ 	  {{ project(
+           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html",
+           img         = "https://wiki.mozilla.org/images/5/59/Webstructables.jpg",
+           img_alt     = "",
+           author      = "Mozilla",
+           title       = "Make your own \"webstructable\" how-to",
+           description = "This project lets you create your own web page tutorial. Use your new-found HTML, CSS and Popcorn wisdom to create the world's greatest how-to. What do you want to make today?"
+         ) 
+      }}
+      {{ project(
+           href        = "http://toolness.github.com/friendlycode/?p=/p/151",
+           img         = "https://wiki.mozilla.org/images/b/be/Soapthumb.png", 
+           img_alt     = "",
+           author      = "Hive NYC",
+           title       = "Speak your mind",
+           description = "<i>Got something to shout about?</i> A rant, cause, passion project or block party you want the world to know about? Shout it from the rooftops by making your own web page in minutes, using this handy remixable template. Then share it via email, Twitter, Facebook or URL. Easy!"
+         )
+      }}
     </ul>
   </div>
       
 {% endblock %}
->>>>>>> move projects into layout (partially broken styles)
+{% macro project(href, img, img_alt, author, title, description) -%}
+  <li class="project">
+    <div>
+        <a href="{{ href }}">
+          <img src="{{ img }}" alt="{{ img_alt }}">
+        </a>
+        <div class="caption">
+          By {{ author }}
+        </div>
+    </div>
+    <div>
+      <h3>{{ title }}</h3>
+      <p>{{ description|safe }}</p>
+      <p><a href="{{ href }}" class="button">Make Project</a>
+    </div>
+  </li>
+{%- endmacro %}
