--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -95,8 +95,8 @@
         </div>
     </div>
     <div class="info">
-      <h3>{{ title }}</h3>
-      <p>{{ description|safe }}</p>
+      <h3 class="title">{{ title }}</h3>
+      <p class="description">{{ description|safe }}</p>
       <p><a href="{{ href }}" class="button">Make Project</a>
     </div>
   </li>
