--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -1,6 +1,7 @@
 {% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
+{% block content_id %}home{% endblock %}
 {% block body %}
   <div class="container divider">
     <div class="row">
@@ -28,8 +29,8 @@
             <img src="http://placehold.it/252x175" alt="">
           </a>
           <div class="caption">
-            <h5>Internet Famous</h5>
-            <p>Make a meme.</p>
+            <p>Make a meme</p>
+            <h5 class="title">with Internet Famous</h5>
           </div>
         </div>
       </li>
@@ -40,8 +41,8 @@
             <img src="http://placehold.it/252x175" alt="">
           </a>
           <div class="caption">
-            <h5>How To Make A Tumblr Theme</h5>
-            <p>Hack a HTML theme.</p>
+            <p>Hack a HTML theme</p>
+            <h5 class="title">with How To Make A Tumblr Theme</h5>
           </div>
         </div>
       </li>
@@ -52,8 +53,8 @@
             <img src="http://placehold.it/252x175" alt="">
           </a>
           <div class="caption">
-            <h5>Web Arcade</h5>
-            <p>Level up your HTML skills.</p>
+            <p>Level up your HTML skills</p>
+            <h5 class="title">at the Web Arcade</h5>
           </div>
         </div>
       </li>
