--- a/webpagemaker/website/templates/website/gallery.html
+++ b/webpagemaker/website/templates/website/gallery.html
@@ -1,11 +1,12 @@
 {% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
+{% block content_id %}gallery{% endblock %}
 {% block body %}
   <div class="container divider">
     <div class="row">
       <div class="hero-unit span6">
-        <hgroup>
+        <hgroup class="large">
           <h2>Look, share and remix</h2>
           <h1>Gallery</h1>
         </hgroup>
@@ -76,10 +77,10 @@
       <img src="{{ img }}" alt="">
     </a>
     <div class="caption">
-      <h5>{{ title }}</h5>
+      <h5 class="title">{{ title }}</h5>
       <p>By {{ author }}</p>
-      <a href="#" class="button button-orange">Remix</a>
     </div>
+    <a href="#" class="button button-orange">Remix</a>
   </div>
 </li>
 {%- endmacro %}
