--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -5,7 +5,7 @@
   <div class="container divider">
     <div class="row">
       <div class="hero-unit span6">
-        <hgroup>
+        <hgroup class="large">
           <h2>Webpage Maker</h2>
           <h1>Projects</h1>
         </hgroup>
@@ -91,13 +91,13 @@
           <img src="{{ img }}" alt="{{ img_alt }}">
         </a>
         <div class="caption">
-          By {{ author }}
+          <p>By {{ author }}</p>
         </div>
     </div>
     <div class="info">
       <h3 class="title">{{ title }}</h3>
       <p class="description">{{ description|safe }}</p>
-      <p><a href="{{ href }}" class="button">Make Project</a>
+      <p><a href="{{ href }}" class="button-blue">Make Project</a>
     </div>
   </li>
 {%- endmacro %}
