--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -82,6 +82,9 @@
   </div>
   </div>
 
+  <script src="//www.mozilla.org/media/js/libs/jquery-1.7.1.min.js"></script>
   <script src="//www.mozilla.org/tabzilla/media/js/tabzilla.js"></script> 
+  {% block scripts %}
+  {% endblock %}
 </body>
 </html>
