bold current page in nav

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -130,6 +130,16 @@ Layout styles
     border-left: none;
   }
 
+  #projects #nav-main .projects a {
+    font-weight: bold;
+  }
+  #gallery #nav-main .gallery a {
+    font-weight: bold;
+  }
+  #about #nav-main .about a {
+    font-weight: bold;
+  }
+
   .logo {
     font-family: OpenSansLight, sans-serif;
     font-size: 2.2em;
