--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -1,6 +1,7 @@
 {% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
+{% block page_id %}about{% endblock %}
 {% block body %}
   <div class="container">
     <div class="hero-unit">
