--- a/webpagemaker/website/templates/website/gallery.html
+++ b/webpagemaker/website/templates/website/gallery.html
@@ -1,7 +1,7 @@
 {% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
-{% block content_id %}gallery{% endblock %}
+{% block page_id %}gallery{% endblock %}
 {% block body %}
   <div class="container divider">
     <div class="row">
