--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -1,6 +1,7 @@
 {% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
+{% block page_id %}projects{% endblock %}
 {% block body %}
   <div class="container divider">
     <div class="row">
