--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -4,7 +4,7 @@
 {% block page_id %}projects{% endblock %}
 {% block body %}
   <div class="container divider">
-    <div class="row">
+    <div class="row projectpeoples">
       <div class="hero-unit span6">
         <hgroup class="large">
           <h2>Webpage Maker</h2>
@@ -41,8 +41,8 @@
            title       = "Make Your Own Meme",
            description = "Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page -- featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine."
          ) 
-	  }}
-	  {{ project(
+      }}
+	    {{ project(
            href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html",
            img         = "https://wiki.mozilla.org/images/8/88/Arcademap.jpg",
            img_alt     = "",
@@ -51,7 +51,7 @@
            description = "HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>\"quotes like this.\"</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it.Use the comments to navigate your way. Your goal: fix a broken map of the web arcade to unlock new missions and explore brave new webby worlds."
          ) 
       }}
-	  {{ project(
+	    {{ project(
            href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523",
            img         = "https://wiki.mozilla.org/images/8/89/Stuck90s.png",
            img_alt     = "",
@@ -60,7 +60,7 @@
            description = "Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly -- kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s."
          ) 
       }}
-	  {{ project(
+	    {{ project(
            href        = "https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY",
            img         = "https://wiki.mozilla.org/images/3/34/Popdiy.png",
            img_alt     = "",
@@ -69,7 +69,7 @@
            description = "Add your own voice to a cheesy 1950s TV commercial! Add pop-ups and commentary, change meanings, and hack pop culture using Mozilla Popcorn."
          ) 
       }}
-	  {{ project(
+	    {{ project(
            href        = "https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY",
            img         = "https://wiki.mozilla.org/images/5/5c/Iathumb.png",
            img_alt     = "",
@@ -78,7 +78,7 @@
            description = "This project uses the popular \"Inanimate Alice\" interactive novel and Mozilla Hackasaurus to create narrative mayhem. Youth can create their own narrative using characters and a storyline they create, learning how to remix the web along the way."
          ) 
       }}
- 	  {{ project(
+ 	    {{ project(
            href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html",
            img         = "https://wiki.mozilla.org/images/5/59/Webstructables.jpg",
            img_alt     = "",
