--- a/webpagemaker/website/templates/website/gallery.html
+++ b/webpagemaker/website/templates/website/gallery.html
@@ -4,7 +4,7 @@
 {% block page_id %}gallery{% endblock %}
 {% block body %}
   <div class="container divider">
-    <div class="row">
+    <div class="row gallerycat">
       <div class="hero-unit span6">
         <hgroup class="large">
           <h2>Look, share and remix</h2>
