add some header spacing

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -101,6 +101,10 @@ Layout styles
     padding-bottom: 0;
   }
 
+  #masthead {
+    margin-bottom: 30px;
+  }
+
   #masthead .row {
     clear: both;
   }
